2008-03-15  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Adjust for GPPortInfo change.

2008-03-13  Linus Walleij  <triad@df.lth.se>

	* ptp.c/ptp.h: Added 2 new MTP object format codes.

2008-03-02  Marcus Meissner  <marcus@jet.franken.de>

	* music-players.h: Synced from libmtp.

2008-03-01  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c: MTP GetObjectReferences on Sansa MTP device
	  can skip the dataphase, but return OK as response.

	  Handle this strange case here.

2008-02-22  Marcus Meissner  <marcus@jet.franken.de>

	* library.c, ptp.h:
	  Always use Canon capture mode if available.

	  Allow the Canon capture mode to store its stuff on the card
	  by using the 0xd029 property (CaptureTransferMode).

2008-02-19  Marcus Meissner  <marcus@jet.franken.de>

	* config.c: Do not clear the "changed" flag when its not the
	  widget we want.

2008-02-07  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Canon IXUS 860 IS as reported.

2008-02-06  Marcus Meissner  <marcus@jet.franken.de>

	* config.c: Allow synchronising the system time to
	  the camera. Just do:

		gphoto2 --set-config synctime=on

	  Confirmed to work for Canon IXUS.

2008-01-03  Linus Walleij  <triad@df.lth.se>

	* ptp.c,ptp.h: Moved mtp property caching and
	  removing into this file. (not currently hooked up).

2007-12-10  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Disabled LUMIX FZ-20 (alternate ID),
	  since customer reports it only doing mass storage.

2007-12-10  Marcus Meissner  <marcus@jet.franken.de>

	* library.c, music-players.h, device-flags.h:
	  New devices from libmtp project.
	  New device-flags.h from libmtp project.

2007-12-03  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Nikon DSC D300, Coolpix 7900.

2007-11-16  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Made metadata reading more intelligent, 
	  and fall back to lowlevel methods if necessary.

2007-11-14  Marcus Meissner  <marcus@jet.franken.de>
